--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
       <%= render 'users/userinfo', user: @user, book: @book %>
     </div>
     
-    <!-- ブック的な -->
+    <!-- 他の人の情報 -->
     <div class="col-md-8 offset-md-1">
       <%= render 'books/booklist', user: @user, book: @book %>
     </div>
