--- a/app/views/users/_userinfo.html.erb
+++ b/app/views/users/_userinfo.html.erb
@@ -14,16 +14,32 @@
   </tbody>
 </table>
 
-<%= button_to edit_user_path(user),class: "btn btn-outline-secondary btn-block", method: :get  do %>
-  <i class="fas fa-user-cog" style="color: #e3e3e3;"></i> user edit
-<% end %> 
+<% if user == current_user %>
+  <%= button_to edit_user_path(user),class: "btn btn-outline-secondary btn-block", method: :get  do %>
+    <i class="fas fa-user-cog" style="color: #e3e3e3;"></i> user edit
+  <% end %> 
+<% else %>
+  <%= button_to users_path(current_user),class: "btn btn-outline-secondary btn-block", method: :get  do %>
+    <i class="fas fa-user-cog" style="color: #e3e3e3;"></i> user edit
+  <% end %> 
+<% end %>
 
 <h2 class="mt-3">New Book</h2>
 
+
+<% if book.errors.any? %>
+  <%= book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: book do |f| %>
-  <h4>Title</h4>
+  <a>Title</a>
     <%= f.text_field :title %>
-  <h4>Opinion</h4>
+  <a>Opinion</a>
     <%= f.text_area :body %>
   <%= f.submit 'CreateBook' %>
 <% end %>
