--- a/app/views/users/list.html.erb
+++ b/app/views/users/list.html.erb
@@ -1,14 +1,14 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     
-    <!-- 選んだ人の情報 -->
+    <!-- 自分の情報 -->
     <div class="col-md-3">
       <%= render 'users/userinfo', user: @user, book: @book %>
     </div>
     
-    <!-- 選んだ人の情報 -->
+    <!-- 他の人の情報 -->
     <div class="col-md-8 offset-md-1">
-      <%= render 'books/booklist', user: @user, book: @book %>
+      <%= render 'users/userlist', user: @user, ulist: @users, book: @book %>
     </div>
     
   </div>
