--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,15 @@
-<div>
-  <p>本のタイトル：<%= @book.title %></p>
-  <p>内容：<%= @book.body %></p>
-  <p>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></p>
-  <p>ユーザーネーム：<%= @book.user.name %></p>
-  <p>投稿日：<%= @user.created_at.strftime('%Y/%m/%d') %></p>
-  <% if @book.user == current_user %>
-    <%= link_to "削除", book_path(@book), method: :delete %>
-  <% end %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    
+    <!-- 登録者 -->
+    <div class="col-md-3">
+      <%= render 'users/userinfo', user: @book.user, book: @book %>
+    </div>
+    
+    <!-- 本の詳細 -->
+    <div class="col-md-8 offset-md-1">
+      <%= render 'books/bookdetail', book: @book, user: @user %>
+    </div>
+    
+  </div>
 </div>
