--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
               <% end %>
               
               <%= link_to books_path do %>
-                <i class="fas fa-book-open" style="color: #e3e3e3;"></i> books
+                <i class="fas fa-book-open" style="color: #e3e3e3;"></i> Books
               <% end %>
             
               <%= link_to destroy_user_session_path,method: :delete do %>
@@ -53,7 +53,7 @@
                 <i class="fas fa-home" style="color: #e3e3e3;"></i> Home
               <% end %>
               
-              <%= link_to homes_about_path do %>
+              <%= link_to home_about_path do %>
                 <i class="fas fa-link" style="color: #e3e3e3;"></i> About
               <% end %>
               
