--- a/app/views/books/_bookdetail.html.erb
+++ b/app/views/books/_bookdetail.html.erb
@@ -2,7 +2,12 @@
 
 <table class="table">
   <tbody>
-    <td><%= image_tag book.user.get_profile_image(100,100) %> <br> <%= book.user.name %> </td>
+    <td>
+      
+      <%= link_to user_path(book.user) do %>
+        <%= image_tag book.user.get_profile_image(100,100) %> <br> <%= book.user.name %>
+      <% end %>
+    </td>
     <td><%= link_to book.title, book_path(book) %></td>
     <td><%= book.body %></td>
     <td>
