--- a/app/views/users/_userinfo.html.erb
+++ b/app/views/users/_userinfo.html.erb
@@ -14,17 +14,12 @@
   </tbody>
 </table>
 
-<% if user == current_user %>
-  <%= button_to edit_user_path(user),class: "btn btn-outline-secondary btn-block", method: :get  do %>
-    <i class="fas fa-user-cog" style="color: #e3e3e3;"></i> user edit
-  <% end %> 
-<% else %>
-  <%= button_to user_path(current_user.id),class: "btn btn-outline-secondary btn-block", method: :get  do %>
-    <i class="fas fa-user-cog" style="color: #e3e3e3;"></i> user edit
-  <% end %> 
-<% end %>
 
-<h2 class="mt-3">New Book</h2>
+<%= link_to edit_user_path(user),class: "btn btn-outline-secondary btn-block", method: :get  do %>
+  <i class="fas fa-user-cog" style="color: #e3e3e3;"></i> user edit
+<% end %> 
+
+<h2 class="mt-3">New book</h2>
 
 
 <% if book.errors.any? %>
@@ -41,5 +36,5 @@
     <%= f.text_field :title %>
   <p>Opinion</p>
     <%= f.text_area :body %>
-  <%= f.submit 'CreateBook' %>
+  <%= f.submit 'Create Book' %>
 <% end %>
